--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-This is disassembled and reOPTImized optiboot version.
+This is disassembled and reOPTImized optiboot version of Tom's optiboot from
+https://github.com/TCWORLD/ATTinyCore/tree/master/tiny/bootloaders/optiboot.
 
 Nothing special, just an attempt to learn AVR ASM flavour on a practical example.
 
 Achievements: 
-Reduced code size to 0x1FE allowing to fit the loader to last 8 pages.
+Reduced code size to 0x1FC allowing to fit the loader to last 8 pages.
 Using T1 for led flashing
 
 Targets:
